[tool.poetry]
name = "kalman-filter"
version = "0.1.0"
description = ""
authors = ["shimo <shimo.8810@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.31.0"
pylint = "^2.7.4"
flake8 = "^3.9.0"
matplotlib = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
